[package]
name = "rust-test"
version = "0.1.0"
authors = ["Shawn <qqdog1@yahoo.com.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.11.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "loggerTest"
path = "src/loggerTest.rs"
