[package]
name = "rust-test"
version = "0.1.0"
authors = ["Shawn <qqdog1@yahoo.com.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.11.0"
rand = "0.7.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "console_log_test"
path = "src/console_log_test.rs"

[[bin]]
name = "file_log_test"
path = "src/file_log_test.rs"

[[bin]]
name = "console_input_test"
path = "src/console_input_test.rs"

[[bin]]
name = "guessing_number"
path = "src/guessing_number.rs"

[[bin]]
name = "loop_test"
path = "src/loop_test.rs"

[[bin]]
name = "string_memory_test"
path = "src/string_memory_test.rs"

[[bin]]
name = "tuple_test"
path = "src/tuple_test.rs"